# trade-core

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.raft-sim.yml  docker-compose.raft.yml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
acceptance-smoke-20260718/: acceptance-report.md  metrics-capacity.csv  metrics-fault.csv  metrics-stage1.csv  metrics-stage2.csv  metrics-stage3.csv  metrics-warmup.csv
assets/: admin.html  kline.html  trade.html
benches/: cluster_throughput.rs  latency.rs  order_batch_e2e.rs  order_e2e.rs  raft_idempotency.rs  raft_throughput.rs  throughput.rs
docs/: acceptance-runbook.md  backup-restore.md  production-deployment-5m-tps.md  runbook.md  stage-performance-20260718.md  stage-performance-local-baseline.md
examples/: demo.rs
scripts/: README.md  gen-deploy.py  protoc-compat.sh
scripts/acceptance/: run-ladder.py
scripts/backup/: backup-node.sh  restore-node.sh
src/: affinity.rs  asset_log.rs  book.rs  cluster.rs  engine.rs  exchange.rs  execution_outbox.rs  fees.rs  gateway.rs  idgen.rs  journal.rs  journal_inspect.rs  kline.rs  lib.rs  lockfree.rs  metrics.rs  migration.rs  oblog.rs  order.rs  order_queue.rs  raft_log.rs  replication.rs  risk.rs  sharding.rs  snapshot.rs  trade.rs  types.rs  wire.rs
tests/: category_fingerprint.rs  exchange_pipeline.rs  execution_outbox_recovery.rs  integration.rs  raft_match_replay_e2e.rs  raft_snapshot_wal_recovery.rs  replay_and_risk.rs  sigterm_shutdown.rs  snapshot_stp_limits.rs  strategy_props.rs  tcp_roundtrip.rs
(+5 files in other folders)
