[package]
name = "trade-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "A commercial-grade order matching engine core with pluggable price matching strategies."
license = "MIT OR Apache-2.0"
repository = "https://example.com/trade-core"
keywords = ["trading", "matching-engine", "order-book", "exchange", "finance"]
categories = ["finance", "data-structures"]

[lib]
name = "trade_core"
path = "src/lib.rs"

# The three deployed services: order (flow generator / order-system stand-in),
# trade-core (the matching node), market-data (K-lines + depth + chart UI).
[[bin]]
name = "trade-core"
path = "src/bin/exchange_server.rs"

[[bin]]
name = "order"
path = "src/bin/sim_trader.rs"

[[bin]]
name = "market-data"
path = "src/bin/market_data.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[bench]]
name = "throughput"
path = "benches/throughput.rs"
harness = false

[[bench]]
name = "cluster_throughput"
path = "benches/cluster_throughput.rs"
harness = false

[[bench]]
name = "latency"
path = "benches/latency.rs"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
raft = "0.7.0"
protobuf = "2.28"
mysql = "25"

[[bin]]
name = "raft-sim"
path = "src/bin/raft_sim.rs"

[[bin]]
name = "raft-node"
path = "src/bin/raft_node.rs"

[[bin]]
name = "order-api"
path = "src/bin/order_api.rs"
